feat(guest): clean secrets on runner stop

--- a/scripts/guest/agent-runner.env
+++ b/scripts/guest/agent-runner.env
@@ -7,3 +7,5 @@
 # AGENTLAB_RUNNER_TIMEOUT_SECONDS=0
 # AGENTLAB_REPO_DIR=/tmp/repo
 # AGENTLAB_WORK_DIR_BASE=/tmp
+# AGENTLAB_CLEANUP_SECRETS=1
+# AGENTLAB_CLEANUP_REPO=1
