--- a/scripts/guest/agent-runner.service
+++ b/scripts/guest/agent-runner.service
@@ -10,6 +10,7 @@ Group=agent
 Environment=AGENTLAB_BOOTSTRAP=/etc/agentlab/bootstrap.json
 EnvironmentFile=-/etc/agentlab/agent-runner.env
 ExecStart=/usr/local/bin/agent-runner
+ExecStopPost=/usr/local/bin/agent-secrets-cleanup
 Restart=on-failure
 RestartSec=10
 RuntimeDirectory=agentlab secrets
