feat(guest): add /work workspace auto-mount

--- a/scripts/guest/agent-runner.service
+++ b/scripts/guest/agent-runner.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Agent Runner
-After=network-online.target
-Wants=network-online.target
+After=network-online.target agentlab-workspace-setup.service
+Wants=network-online.target agentlab-workspace-setup.service
 
 [Service]
 Type=simple
