feat(security): add optional bubblewrap inner sandbox

--- a/scripts/guest/agent-runner.env
+++ b/scripts/guest/agent-runner.env
@@ -9,3 +9,5 @@
 # AGENTLAB_WORK_DIR_BASE=/tmp
 # AGENTLAB_CLEANUP_SECRETS=1
 # AGENTLAB_CLEANUP_REPO=1
+# AGENTLAB_INNER_SANDBOX=bubblewrap
+# AGENTLAB_INNER_SANDBOX_ARGS="--bind /scratch /scratch"
