fix(guest): add curl timeouts to agent-runner

--- a/scripts/guest/agent-runner.env
+++ b/scripts/guest/agent-runner.env
@@ -5,6 +5,10 @@
 # AGENTLAB_AGENT_ARGS=""
 # AGENTLAB_RUNNER_STREAM_LOGS=0
 # AGENTLAB_RUNNER_TIMEOUT_SECONDS=0
+# AGENTLAB_CURL_CONNECT_TIMEOUT=10
+# AGENTLAB_CURL_BOOTSTRAP_MAX_TIME=60
+# AGENTLAB_CURL_REPORT_MAX_TIME=20
+# AGENTLAB_CURL_UPLOAD_MAX_TIME=300
 # AGENTLAB_REPO_DIR=/tmp/repo
 # AGENTLAB_WORK_DIR_BASE=/tmp
 # AGENTLAB_CLEANUP_SECRETS=1
