docs(cli): add generated CLI reference

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
         run: make docs-tools
       - name: Docs Check
         run: make docs-check
+      - name: Docs Verify
+        run: make docs-verify
       - name: Test CI
         run: make test-ci
       - name: Coverage Summary
